# europe_weather_data

./: .gitignore  README.md  create_db.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt  utils.py
databases/: weather_bucharest.db
