[project]
name = ""
version = ""
description = ""
authors = [
    {name = "paunstefan", email = "paunstefan@protonmail.com"},
]
dependencies = [
    "netCDF4>=1.6.0",
    "matplotlib>=3.5.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
